--- a/view/content/template.html
+++ b/view/content/template.html
@@ -115,7 +115,8 @@
             <p style="font-size: 22px;">
                 Por haber concluido satisfactoriamente sus estudios en el idioma <b
                     style="text-transform: uppercase;">{idioma}.</b><br>
-                Se le confiere el/la presente <b style="text-transform: uppercase;">{tipo}</b> a solicitud del interesado(a) y para
+                Se le confiere el/la presente <b style="text-transform: uppercase;">{tipo}</b> a solicitud del
+                interesado(a) y para
                 sus fines que considere pertinentes.
             </p>
         </div>
@@ -131,8 +132,6 @@
                     Gerente General INDI</p>
             </div>
         </div>
-
-
         <div class="footer">
             Este certificado es válido y fue generado automáticamente.
         </div>
