--- a/view/content/template.html
+++ b/view/content/template.html
@@ -50,7 +50,7 @@
         }
 
         .signature p::before {
-            content: "Firma digital aquí";
+            content: "MNOI-456789012";
             display: block;
             font-size: 14px;
             color: #888;
